<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryDark"
    android:padding="5dp"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <ImageView
        android:id="@+id/add_image"
        android:layout_width="wrap_content"
        android:layout_height="100dp"
        android:contentDescription="@string/image_key"/>

    <TextView
        android:id="@+id/title1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/name_title"
        android:textColor="@color/colorPrimary"
        android:textSize="36sp"
        app:fontFamily="@font/arlrdbd"
        app:layout_constraintTop_toBottomOf="@id/add_image" />

    <EditText
        android:id="@+id/name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/colorAccent"
        android:textSize="20sp"
        app:fontFamily="@font/arlrdbd"
        android:inputType="text"
        app:layout_constraintTop_toBottomOf="@id/title1"/>

    <TextView
        android:id="@+id/title2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/colorPrimary"
        android:textSize="36sp"
        app:fontFamily="@font/arlrdbd"
        android:text="@string/desc_title"
        app:layout_constraintTop_toBottomOf="@id/name"/>

    <EditText
        android:id="@+id/description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/colorAccent"
        android:textSize="20sp"
        app:fontFamily="@font/arlrdbd"
        android:inputType="text"
        app:layout_constraintTop_toBottomOf="@id/title2"/>

    <Button
        android:id="@+id/add_info"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add_text_info"
        android:background="@color/colorPrimary"
        android:textColor="@color/colorAccent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>

</android.support.constraint.ConstraintLayout>