<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryDark"
    android:padding="5dp"
    tools:context="com.rodriguez.foundmatch.Activities.MainActivity">

    <TextView
        android:id="@+id/welcome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/greeting"
        android:textColor="@color/colorPrimary"
        android:textSize="20sp"
        app:fontFamily="@font/arlrdbd"
        app:layout_constraintTop_toBottomOf="@id/image_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageButton
        android:id="@+id/image_button"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:src="@drawable/keymatch2"
        android:background="@null"
        android:scaleType="fitCenter"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:contentDescription="@string/app_name" />

    <Button
        android:id="@+id/keys_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@null"
        android:drawableStart="@drawable/mykeys_icon_small_blue_2"
        android:drawableLeft="@drawable/mykeys_icon_small_blue_2"
        android:drawablePadding="5dp"
        android:padding="5dp"
        android:text="@string/title_viewer"
        android:textColor="@color/colorPrimary"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</android.support.constraint.ConstraintLayout>