<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryDark"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <TextView
        android:id="@+id/no_match_close"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/match_text2"
        android:textColor="@color/colorPrimary"
        android:textSize="30sp"
        app:fontFamily="@font/arlrdbd"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <LinearLayout
        android:id="@+id/match1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:layout_marginStart="5dp"
        android:layout_marginLeft="5dp"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@id/no_match_close">

        <ImageView
            android:id="@+id/match_image1"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_marginEnd="10dp"
            android:layout_marginRight="10dp"
            android:contentDescription="@string/image_key" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/match_name1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/colorAccent"
                android:textSize="24sp"
                android:textStyle="bold"
                app:fontFamily="@font/arlrdbd" />

            <TextView
                android:id="@+id/match_description1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/colorAccent"
                android:textSize="18sp"
                app:fontFamily="@font/arlrdbd" />

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/match2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:layout_marginStart="5dp"
        android:layout_marginLeft="5dp"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@id/match1">

        <ImageView
            android:id="@+id/match_image2"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_marginEnd="10dp"
            android:layout_marginRight="10dp"
            android:contentDescription="@string/image_key" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/match_name2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/colorAccent"
                android:textSize="24sp"
                android:textStyle="bold"
                app:fontFamily="@font/arlrdbd" />

            <TextView
                android:id="@+id/match_description2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/colorAccent"
                android:textSize="18sp"
                app:fontFamily="@font/arlrdbd" />

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/match3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:layout_marginStart="5dp"
        android:layout_marginLeft="5dp"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@id/match2">

        <ImageView
            android:id="@+id/match_image3"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_marginEnd="10dp"
            android:layout_marginRight="10dp"
            android:contentDescription="@string/image_key" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/match_name3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/colorAccent"
                android:textSize="24sp"
                android:textStyle="bold"
                app:fontFamily="@font/arlrdbd" />

            <TextView
                android:id="@+id/match_description3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/colorAccent"
                android:textSize="18sp"
                app:fontFamily="@font/arlrdbd" />

        </LinearLayout>

    </LinearLayout>

    <TextView
        android:id="@+id/mess_notkey"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/match3"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="@string/not_key"
        android:textColor="@color/colorPrimary"
        android:textSize="30sp"
        app:fontFamily="@font/arlrdbd" />

    <Button
        android:id="@+id/add_button_close"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/mess_notkey"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="5dp"
        android:layout_marginRight="5dp"
        android:background="@color/colorPrimary"
        android:text="@string/add_text"
        android:textColor="@color/colorAccent" />

</android.support.constraint.ConstraintLayout>